--- a/docker-deploy/zhou-demo/.env
+++ b/docker-deploy/zhou-demo/.env
@@ -4,9 +4,9 @@ ApplicationStartPortPrefix=96
 ContainerSuffix=d
 
 # Docker Hub
-# DockerHub_Registry=registry.cn-shanghai.aliyuncs.com/leon-pu
-DockerHub_Registry=dockerhub.damaozhu.com.cn:5000
-DockerImage_Tag=norya
+DockerHub_Registry=registry.cn-beijing.aliyuncs.com/leon-pu
+# DockerHub_Registry=dockerhub.damaozhu.com.cn:5000
+DockerImage_Tag=latest
 
 # Guid配置信息
 GuidSettings_ServerId=1
@@ -19,15 +19,15 @@ PostgresDB_Password=root
 
 # 环境配置
 SECRETKEY=company-norya-key
-APIGatewayServer=http://58.40.82.26:9603
-MoreJeeSite=http://58.40.82.26:9621
-MoreJeeToolSite=http://58.40.82.26:9622
-MoreJeeOMSToolSite=http://58.40.82.26:9623/dmz/oms/norya/order2excel
+APIGatewayServer=http://117.143.248.38:9603
+MoreJeeSite=http://117.143.248.38:9621
+MoreJeeToolSite=http://117.143.248.38:9622
+MoreJeeOMSToolSite=http://117.143.248.38:9623/dmz/oms/norya/order2excel
 JwtSettings_Issuer=norya.cn
 JwtSettings_Audience=norya.cn
 JwtSettings_SecretKey=norya-production-app
 JwtSettings_ExpiresDay=1
 BasicServerDB=appbasic
 OMSServerDB=appoms
-Plugins_OrderViewer=http://58.40.82.26:9622/dmz-oms/order-viewer
-Plugins_MediaShare=http://58.40.82.26:9622/dmz-hd/share
+Plugins_OrderViewer=http://117.143.248.38:9622/dmz-oms/order-viewer
+Plugins_MediaShare=http://117.143.248.38:9622/dmz-hd/share
